--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 
 
+
 .app__content {
+  padding: 1rem;
   background: var(--surface-card);
   border-radius: 10px;
   margin-bottom: 1rem;
@@ -75,6 +77,7 @@
 }
 
 .app__products__header__nav {
+  background-color: red;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
