--- a/src/app/products/Products.component.scss
+++ b/src/app/products/Products.component.scss
@@ -11,11 +11,13 @@
   align-items: start;
   padding: 1rem;
   gap: 0.5rem;
-  .img {
-    width: 5em;
-    margin: auto;
-    object-fit: contain;
-  }
+  margin-top: 1rem;
+}
+
+.img {
+  width: 5em;
+  margin: auto;
+  object-fit: contain;
 }
 
 .products__content__text {
@@ -38,36 +40,39 @@
 }
 
 .app__products__header__nav {
+  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
   align-items: end;
   justify-items: start;
-  gap: 1rem;
-  .autocomplete {
-    grid-column: span 2;
-    grid-row: 1;
-    justify-self: center;
-  }
-  .layout {
-    grid-column: 1;
-    grid-row: 2;
-  }
-  .button#butonAdd {
-    height: 2.7rem;
-    justify-self: end;
-    background-color: #33ec83;
-    box-shadow: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: var(--surface-card);
+  gap: 0.3rem;
+}
+
+.autocomplete {
+  grid-column: span 2;
+  grid-row: 1;
+  justify-self: center;
+  margin-bottom: 0.5rem;
+}
+.layout {
+  grid-column: 1;
+  grid-row: 2;
+}
+.button#butonAdd {
+  height: 2.7rem;
+  justify-self: end;
+  background-color: #33ec83;
+  box-shadow: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--surface-card);
+  font-weight: 600;
+  border-radius: 0.4rem;
+  cursor: pointer;
+  span {
     font-weight: 600;
-    border-radius: 0.4rem;
-    cursor: pointer;
-    span {
-      font-weight: 600;
-    }
   }
 }
 
@@ -82,17 +87,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  .app__products__create__content {
-    width: 90%;
-    height: 96%;
-    background-color: var(--surface-card);
-    border-radius: 1rem;
-    padding: 1rem;
-    overflow: auto;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-  }
+}
+
+.app__products__create__content {
+  width: 90%;
+  height: 96%;
+  background-color: var(--surface-card);
+  border-radius: 1rem;
+  padding: 1rem;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .app__products__create__content__header {
@@ -163,7 +169,11 @@
   .app__products__header__nav {
     display: flex;
     justify-content: space-between;
-    gap: 2rem;
+    gap: 1rem;
+  }
+
+  .autocomplete {
+    margin-bottom: 0;
   }
 
   .products__content {
