--- a/src/app/products/Products.component.scss
+++ b/src/app/products/Products.component.scss
@@ -2,6 +2,7 @@
 
 .products {
   width: 100%;
+  height: 100%;
 }
 
 .products__content {
@@ -15,7 +16,7 @@
 }
 
 .img {
-  width: 5em;
+  height: 5rem;
   margin: auto;
   object-fit: contain;
 }
@@ -137,6 +138,10 @@
 
 .update {
   background-color: #33ec83;
+}
+
+.product-grid {
+  height: 100%;
 }
 
 .gridState {
