algunos estilos se habian eliminado con algunos cambion y daba error

--- a/src/app/create/create.component.html
+++ b/src/app/create/create.component.html
@@ -1,4 +1,4 @@
-<form id="form">
+<form id="form" class="form">
   <aside class="app__products__create__content__content-input">
     <span class="p-float-label name">
       <input
