--- a/src/app/products/Products.component.scss
+++ b/src/app/products/Products.component.scss
@@ -48,7 +48,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-} 
+}
 
 .delete {
   background-color: #ec3333;
@@ -56,6 +56,32 @@
 
 .update {
   background-color: #33ec83;
+}
+
+.app__products__create {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #00000024;
+  .app__products__create__content {
+    height: 90vh;
+    width: 90vw;
+    background: var(--surface-card);
+    padding: 1rem;
+    border-radius: 1rem;
+  }
+}
+
+.app__products__create__content__header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 @media (min-width: 520px) {
